--- a/AdminLTE-3.1.0/pages/examples/Userprofile.html
+++ b/AdminLTE-3.1.0/pages/examples/Userprofile.html
@@ -1306,7 +1306,7 @@
 
         <!-- tabs section  -->
 
-        <div class="container-fluid pb-2">
+        <div class="container pb-2">
           <div class="row">
             <div class="col-12">
               <div class="shadow-sm chart-card border-0 mt-3">
