--- a/AdminLTE-3.1.0/pages/examples/UserProfilepage.html
+++ b/AdminLTE-3.1.0/pages/examples/UserProfilepage.html
@@ -1390,13 +1390,11 @@
             <div class="profile-image-section">
               <img src="../images/userimg.jpg" alt="profileimg">
             </div>
-
             <div class="profile-info-section">
               <div class="profile-name-row">
                 <h1 class="mb-2">Udit Kumar</h1>
                 <span class="status-badge pending">Pending</span>
               </div>
-
               <div class="profile-meta">
                 <div class="meta-item">
                   <i class="fa-solid fa-phone"></i>
@@ -1459,13 +1457,13 @@
           </div>
         </div>
 
-        <!-- added document section -->
+        <!-- ADDED DOCUMENT SHOW SECTION  -->
         <div class="info-section" id="documentSection" style="display:none;">
           <div class="row" id="documentList"></div>
         </div>
 
 
-        <!-- Personal Information -->
+        <!-- PERSONAL INFORMATION  -->
         <div class="info-section">
           <h2 class="section-title"><i class="fa-solid fa-user"></i> Personal Information</h2>
 
@@ -1500,7 +1498,7 @@
           </div>
         </div>
 
-        <!-- bank details  -->
+        <!-- BANK  DETAILS  -->
         <div class="info-section">
           <h2 class="section-title"><i class="fa-solid fa-building-columns"></i> Bank Details</h2>
 
@@ -1556,8 +1554,7 @@
         <div class="container pb-2">
           <div class="row">
             <div class="col-12">
-              <div class="shadow-sm chart-card border-0 mt-3">
-
+              <div class="shadow-sm chart-card border-0">
                 <!-- Header -->
                 <div class="card-header table-title border-0 p-0">
                   <div class="chart-header">
@@ -1702,8 +1699,6 @@
             </div>
           </div>
         </div>
-
-
 
       </section>
     </div>
